# MachineLearning-DataScience_exercise

./: README.md  pyproject.toml
Exercises/Exercises_1/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py
Exercises/Exercises_2/: ex_1_and_2.py  ex_1_and_2_chat.py  ex_3_school.py  ex_4.py  ex_5.py  ex_5_chat.py  ex_6_school.py
Exercises/Exercises_3/: ex_1_4_5.py  ex_1_4_5_fixed.py  ex_2_school.py  ex_3.py  ex_6_school.py
Exercises/Exercises_4/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5_school.py  ex_6_school.py
Exercises/Exercises_5/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py
Exercises/Exercises_6/: ex_3.py  ex_4.py  ex_5.py
Exercises/Exercises_7/: ex_1.py
Exercises/IndividualAssignment/: HW_1.py  HW_2.py  HW_3.py
